- Fixed saturation issue when applying contrast enhancement after background subtraction (in tracker and viewer).
- Added "secondary_factor" parameter in "bkgSub_options", which multiplies the secondary background before it's subtracted from the image.

- Added Tracker.track_next_frame(). Previously this was done in "track.ipynb".

- New viewer features: transparent track overlay, adjustable playback speed and track length, menu bar.

- Removed GPU-optimized code, which I had not maintained since cvtracer. May reintroduce in the future once I understand more about it.

- Updated "analysis.ipynb" to reflect recent changes to output format. In particular the tank diameter and distance to the tank stopped working after allowing non-circular tanks.

--- a/report_progress.ipynb
+++ b/report_progress.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,28 +46,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "66"
+       "13"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trial_dirs = sorted(glob('../tracking/full_20-10-06/Pa*4dpf*'))\n",
+    "trial_dirs = sorted(glob('../tracking/test_21-01-03/*'))\n",
     "len(trial_dirs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -76,72 +76,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "complete             Pa_Fri_14dpf_GroupA_n2_20200612_1400\n",
-      "complete             Pa_Fri_14dpf_GroupA_n2b_20200612_1300_10FPS\n",
-      "complete             Pa_Fri_14dpf_GroupA_n2b_20200612_1400\n",
-      "complete             Pa_Fri_14dpf_GroupB_n2_20200612_1430\n",
-      "complete             Pa_Fri_14dpf_GroupB_n2b_20200612_1430\n",
-      "complete             Pa_Fri_14dpf_GroupC_n2_20200612_1515\n",
-      "complete             Pa_Fri_14dpf_GroupC_n2b_20200612_1515\n",
-      "complete             Pa_Fri_14dpf_GroupD_n2_20200612_1600\n",
-      "complete             Pa_Fri_14dpf_GroupD_n2b_20200612_1600\n",
       "complete             Pa_Fri_14dpf_groupA_n5_20200612_1300_10FPS\n",
-      "complete             Pa_Fri_14dpf_groupB_n5_20200612_1430\n",
-      "complete             Pa_Fri_14dpf_groupC_n5_20200612_1515\n",
-      "complete             Pa_Fri_14dpf_groupD_n5_20200612_1600\n",
-      "complete             Pa_Fri_84dpf_GroupA_n2_20200821_1304\n",
-      "complete             Pa_Fri_84dpf_GroupA_n2b_20200821_1304\n",
+      "complete             Pa_Fri_21dpf_GroupA_n5_20200619_1345\n",
+      "complete             Pa_Fri_28dpf_groupA_n5_20200626_1800\n",
+      "complete             Pa_Fri_7dpf_GroupA_n5_20200605_1100\n",
       "complete             Pa_Fri_84dpf_GroupA_n5_20200821_1304\n",
-      "complete             Pa_Fri_84dpf_GroupB_n1_20200821_1415\n",
-      "complete             Pa_Fri_84dpf_GroupB_n1c_20200821_1415\n",
-      "complete             Pa_Fri_84dpf_GroupB_n2_20200821_1340\n",
-      "complete             Pa_Fri_84dpf_GroupB_n2b_20200821_1340\n",
-      "complete             Pa_Fri_84dpf_GroupB_n5_20200821_1340\n",
-      "complete             Pa_Fri_84dpf_GroupC_n1_20200821_1450\n",
-      "complete             Pa_Fri_84dpf_GroupC_n2_20200821_1450\n",
-      "failed               Pa_Fri_84dpf_GroupC_n5_20200821_1450\n",
-      "complete             Pa_Mon_14dpf_GroupA_n1a_20200713_1725\n",
-      "complete             Pa_Mon_14dpf_GroupA_n1b_20200713_1725\n",
-      "complete             Pa_Mon_14dpf_GroupA_n1c_20200713_1725\n",
-      "complete             Pa_Mon_14dpf_GroupA_n2_20200713_1650\n",
-      "complete             Pa_Mon_14dpf_GroupA_n2b_20200713_1650\n",
-      "complete             Pa_Mon_14dpf_GroupA_n5_20200713_1650\n",
-      "complete             Pa_Mon_14dpf_GroupD_n1a_20200713_1830\n",
-      "complete             Pa_Mon_14dpf_GroupD_n1b_20200713_1830\n",
-      "complete             Pa_Mon_14dpf_GroupD_n1c_20200713_1830\n",
-      "complete             Pa_Mon_14dpf_GroupD_n2a_20200713_1800\n",
-      "complete             Pa_Mon_14dpf_GroupD_n2b_20200713_1800\n",
-      "complete             Pa_Mon_14dpf_GroupD_n5_20200713_1800\n",
-      "complete             Pa_Sun_14dpf_GroupA_n1a_20200621_1600\n",
-      "complete             Pa_Sun_14dpf_GroupA_n1b_20200621_1600\n",
-      "complete             Pa_Sun_14dpf_GroupA_n2a_20200621_1530\n",
-      "complete             Pa_Sun_14dpf_GroupA_n2b_20200621_1525\n",
-      "complete             Pa_Sun_14dpf_GroupA_n2c_20200621_1600\n",
-      "complete             Pa_Sun_14dpf_GroupA_n5_20200621_1525\n",
-      "complete             Pa_Sun_14dpf_GroupB_n1_20200621_1445\n",
-      "complete             Pa_Sun_14dpf_GroupB_n2a_20200621_1410\n",
-      "complete             Pa_Sun_14dpf_GroupB_n2b_20200621_1410\n",
-      "complete             Pa_Sun_14dpf_GroupB_n2c_20200621_1445\n",
-      "complete             Pa_Sun_14dpf_GroupB_n5a_20200621_1410\n",
-      "complete             Pa_Sun_14dpf_GroupB_n5b_20200621_1445\n",
-      "complete             Pa_Sun_14dpf_GroupC_n1a_20200621_1330\n",
-      "complete             Pa_Sun_14dpf_GroupC_n1b_20200621_1600\n",
-      "complete             Pa_Sun_14dpf_GroupC_n2a_20200621_1255\n",
-      "complete             Pa_Sun_14dpf_GroupC_n2b_20200621_1255\n",
-      "complete             Pa_Sun_14dpf_GroupC_n5a_20200621_1255\n",
-      "complete             Pa_Sun_14dpf_GroupC_n5b_20200621_1330\n",
-      "complete             Pa_Sun_84dpf_ GroupAa_n2b_20200830_1330\n",
-      "complete             Pa_Sun_84dpf_GroupAa_n2_20200830_1330\n",
-      "complete             Pa_Sun_84dpf_GroupAa_n5_20200830_1330\n",
-      "complete             Pa_Sun_84dpf_GroupAb_n1_20200830_1300\n",
-      "complete             Pa_Sun_84dpf_GroupAb_n2_20200830_1300\n",
-      "tracking (87.9%)     Pa_Sun_84dpf_GroupAb_n5_20200830_1300\n",
-      "complete             Pa_Sun_84dpf_GroupBa_n2_20200830_1410\n",
-      "complete             Pa_Sun_84dpf_GroupBa_n2b_20200830_1410\n",
-      "complete             Pa_Sun_84dpf_GroupBa_n5_20200830_1410\n",
-      "complete             Pa_Sun_84dpf_GroupBb_n1_20200830_1215\n",
-      "tracking (90.0%)     Pa_Sun_84dpf_GroupBb_n2_20200830_1215\n",
-      "no log               Pa_Sun_84dpf_GroupBb_n5_20200830_1215\n"
+      "complete             Pa_fri_70dpf_GroupA_n5_20200807_1600\n",
+      "complete             SF_Sat_14dpf_GroupA_n5_20200613_1205\n",
+      "complete             SF_Sat_21dpf_GroupA_n5_20200620_1530\n",
+      "complete             SF_Sat_28dpf_GroupA_n5_20200627_1340\n",
+      "complete             SF_Sat_70dpf_GroupA_n5_20200808_1015\n",
+      "complete             SF_Sat_7dpf_GroupA_n5_20200606_1200\n",
+      "not found            notes.txt\n",
+      "not found            notes.txt~\n"
      ]
     }
    ],
@@ -159,13 +106,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'no log': 1, 'tracking': 2, 'complete': 62, 'failed': 1}"
+       "{'no log': 0, 'tracking': 4, 'complete': 0, 'failed': 7}"
       ]
      },
      "metadata": {},
@@ -185,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
