--- a/track.ipynb
+++ b/track.ipynb
@@ -32,30 +32,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "1\n",
+      "../raw_videos/SF_Sat_14dpf_GroupA_n5_20200613_1205.avi\n"
      ]
     }
    ],
    "source": [
     "''' Select input files to track and an output directory for each. '''\n",
     "\n",
-    "# tracking_dir = '../tracking/full_20-10-06'\n",
-    "# tracking_dir = '../tracking/test_20-10-04'\n",
-    "tracking_dir = 'output_data2'\n",
+    "# tracking_dir = '../tracking/full_21-01-03'\n",
+    "tracking_dir = 'output'\n",
     "\n",
     "# input_files = sorted(glob('../raw_videos/*.avi')) #[:2]\n",
-    "# input_files = sorted(glob('../raw_videos/Pa_*_*4dpf_*.avi')) #[:2]\n",
-    "# input_files = [ '../raw_videos/Pa_Fri_84dpf_GroupA_n2b_20200821_1304.avi' ]\n",
-    "# input_files = [ 'input_data/Pa_Fri_84dpf_GroupC_n5_20200821_1450.avi' ]\n",
-    "# input_files = [ '../raw_videos/Pa_Fri_84dpf_GroupC_n5_20200821_1450.avi' ]\n",
-    "input_files = [ '../raw_videos/SF_Sat_14dpf_GroupA_n5_2020-06-13-120445-0000.avi' ]\n",
+    "input_files = [ '../raw_videos/SF_Sat_14dpf_GroupA_n5_20200613_1205.avi' ]\n",
+    "# input_files = [ '../raw_videos/Pa_fri_70dpf_GroupA_n5_20200807_1600.avi' ]\n",
+    "# input_files = glob('../raw_videos/Pa_[Ff]*_[Gg]roupA_n5_*') \\\n",
+    "#                + glob('../raw_videos/SF_Sat*_[Gg]roupA_n5_*')\n",
     "\n",
     "input_dict = {}\n",
     "for input_file in input_files:\n",
@@ -76,16 +75,26 @@
     "\n",
     "print(len(input_dict))\n",
     "\n",
-    "# for f,D in input_dict.items():\n",
-    "#     print(f)\n",
+    "for f,D in input_dict.items():\n",
+    "    print(f)\n",
     "#     print('   ',D)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "                                                                                                                                                                                                        \r",
+      "     Video capture released"
+     ]
+    }
+   ],
    "source": [
     "import tracker\n",
     "reload(tracker.utils)\n",
@@ -101,10 +110,12 @@
     "settings = dict(\n",
     "    threshold_offset = 13,    # threshold offset for contour-finding\n",
     "    # Background subtraction (for naive background subtraction only).\n",
-    "    bkgSub_options   = dict( n_training_frames = 100, # number of frames used to compute background\n",
+    "    bkgSub_options   = dict( n_training_frames = 200, # number of frames used to compute background\n",
     "                             t_start = 0, t_end = -1, # time range used to compute background\n",
     "                             contrast_factor = 4,     # post-subtraction contrast enhancement factor\n",
-    "                             secondary_subtraction = True )\n",
+    "                             secondary_subtraction = True, \n",
+    "                             secondary_factor = 2 # frame = frame-secondary_factor*secondary_background\n",
+    "                           )\n",
     "    )\n",
     "\n",
     "for input_file,D in input_dict.items():\n",
@@ -133,9 +144,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Tank loaded from output/SF_Sat_14dpf_GroupA_n5_20200613_1205/tank.pik                                                                                                                              "
+     ]
+    }
+   ],
    "source": [
     "''' Trace tanks. '''\n",
     "\n",
@@ -143,21 +162,14 @@
     "    tracker = Tracker(input_video=input_file, **D)\n",
     "    tracker.init_background()\n",
     "    tracker.release()\n",
-    "    tracker.init_tank(thresh=8,dilate=15)"
+    "    tracker.init_tank(thresh=6,dilate=15)\n",
+    "\n",
+    "# cv2.destroyAllWindows()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
    "metadata": {
     "scrolled": false
    },
@@ -166,7 +178,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../raw_videos/SF_Sat_14dpf_GroupA_n5_2020-06-13-120445-0000.avi\n",
+      "../raw_videos/SF_Sat_14dpf_GroupA_n5_20200613_1205.avi\n",
       "     Done                                                                                                                                                                                               "
      ]
     }
@@ -181,15 +193,15 @@
     "from tracker.tracker import Tracker\n",
     "\n",
     "settings.update(dict(\n",
-    "    t_start          = 300,     # Time at which to start tracking, in seconds.\n",
-    "    t_end            = 305,    # Time at which to end tracking, in seconds.\n",
+    "    t_start          = 0,     # Time at which to start tracking, in seconds.\n",
+    "    t_end            = 30,    # Time at which to end tracking, in seconds.\n",
     "    \n",
     "    # Contour detection.\n",
     "    n_pixel_blur     =  7,    # square-root of n-pixels for threshold blurring\n",
     "    block_size       = 15,    # contour block size\n",
     "    threshold_offset = 13,    # threshold offset for contour-finding\n",
-    "    min_area         = 30,    # minimum area for detection\n",
-    "    max_area         = 400,   # maximum area for detection\n",
+    "    min_area         = 25,    # minimum area for detection\n",
+    "    max_area         = 600,   # maximum area for detection\n",
     "    ideal_area       = 100,   # ideal area to rank contours in first frame (default=(min_area+max_area)/2)\n",
     "    max_aspect       = 15,    # maximum aspect ratio for detection\n",
     "    ideal_aspect     = 3,     # ideal aspect ratio to rank contours in first frame (default=max_aspect/2)\n",
@@ -204,7 +216,7 @@
     "    reversal_threshold = 0.5, # average frame-to-frame displacement against the director \n",
     "                              # over the last few frames to trigger a reversal. \n",
     "    live_preview     = False, # Toggle live preview of tracking.\n",
-    "\n",
+    "    save_video       = False, \n",
     "    # What information to draw on the tracking output video.\n",
     "    video_output_options = dict( tank=True, points=False, directors=True, \n",
     "                                 extra_points=True, timestamp=True, \n",
@@ -222,49 +234,17 @@
     "    logging.info(utils.parindent+'Initializing')\n",
     "    tracker = Tracker( input_video=input_file, **input_dict[input_file], **settings )\n",
     "    tracker.init_all()\n",
-    "    tracker.init_secondary_background()\n",
     "    tracker.save_settings()\n",
-    "\n",
-    "    frames_dir = os.path.join(output_dir,'frames')\n",
-    "\n",
     "    try:\n",
     "        tracker.set_frame(tracker.frame_start)\n",
-    "        tracker.init_live_preview()\n",
     "        n_report = max(1,int((tracker.frame_end-tracker.frame_start)/50))\n",
     "        for i_frame in range(tracker.frame_start, tracker.frame_end+1):\n",
     "            if i_frame%n_report==0:\n",
+    "                tracker.save_trial()\n",
     "                percent = (i_frame-tracker.frame_start)/(tracker.frame_end-tracker.frame_start)\n",
     "                logging.info(utils.parindent + f'Tracking: {tracker.get_current_timestamp()}, ' +\n",
     "                             f'{tracker.get_percent_complete():4.1f}% complete')\n",
-    "            if tracker.get_next_frame():\n",
-    "                # When b evaluates to True, intermediate tracking steps are saved \n",
-    "                # as images in \"[output_dir]/frames\".\n",
-    "                b = False # True # 260<tracker.frame_num<275 # \n",
-    "                if b:\n",
-    "                    if not os.path.exists(frames_dir):\n",
-    "                        os.mkdir(frames_dir)\n",
-    "                    cv2.imwrite(os.path.join(frames_dir,f'{tracker.frame_num}-1_raw.png'),tracker.frame)\n",
-    "                tracker.subtract_background()\n",
-    "                if b:\n",
-    "                    cv2.imwrite(os.path.join(frames_dir,f'{tracker.frame_num}-2a_bkg-subtracted.png'),tracker.frame)\n",
-    "                tracker.subtract_secondary_background()\n",
-    "                if b:\n",
-    "                    cv2.imwrite(os.path.join(frames_dir,f'{tracker.frame_num}-2b_bkg2-subtracted.png'),tracker.frame)\n",
-    "                tracker.mask_tank()\n",
-    "                tracker.detect_contours()\n",
-    "                tracker.connect_frames()\n",
-    "                if b:\n",
-    "#                     cv2.imwrite(os.path.join(frames_dir,f'{tracker.frame_num}-2_masked.png'),tracker.frame)\n",
-    "                    video_output_options.update(directors=False)\n",
-    "                    tracker.draw(**video_output_options)\n",
-    "                    cv2.imwrite(os.path.join(frames_dir,f'{tracker.frame_num}-3_contours.png'),tracker.frame)\n",
-    "                    video_output_options.update(directors=True)\n",
-    "                tracker.draw(**video_output_options)\n",
-    "                if b:\n",
-    "                    cv2.imwrite(os.path.join(frames_dir,f'{tracker.frame_num}-4_directors.png'),tracker.frame)\n",
-    "                tracker.write_frame()\n",
-    "                if not tracker.post_frame(delay=1):\n",
-    "                    break\n",
+    "            tracker.track_next_frame(save_frames=False)\n",
     "        tracker.release()\n",
     "        logging.info(utils.parindent+'Saving')\n",
     "        tracker.save_trial()\n",
@@ -308,8 +288,89 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "output/SF_Sat_14dpf_GroupA_n5_20200613_1205/trial.pik\n",
+      "0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[691.        ,   8.38516909],\n",
+       "       [692.        ,   8.34035332],\n",
+       "       [693.        ,   8.2420516 ],\n",
+       "       [694.        ,   8.2420516 ],\n",
+       "       [695.        ,   8.66789289],\n",
+       "       [696.        ,   8.26678991],\n",
+       "       [697.        ,   8.24903365],\n",
+       "       [698.        ,   8.55723259],\n",
+       "       [699.        ,   8.48607623],\n",
+       "       [700.        ,   8.27986523],\n",
+       "       [701.        ,   8.06190112],\n",
+       "       [702.        ,   8.17279399],\n",
+       "       [703.        ,   8.32850634],\n",
+       "       [704.        ,   8.27986523],\n",
+       "       [705.        ,   8.31106825],\n",
+       "       [706.        ,   8.31816901],\n",
+       "       [707.        ,   8.34709195],\n",
+       "       [708.        ,   8.48534614],\n",
+       "       [709.        ,   8.25384134],\n",
+       "       [710.        ,   7.72467901],\n",
+       "       [711.        ,   4.64827176],\n",
+       "       [712.        ,   6.79978262],\n",
+       "       [713.        ,   6.32343359],\n",
+       "       [714.        ,   4.30898815],\n",
+       "       [715.        ,   7.28747581],\n",
+       "       [716.        ,   7.63751209],\n",
+       "       [717.        ,   7.71986938],\n",
+       "       [718.        ,   7.78305376],\n",
+       "       [719.        ,   7.78111894],\n",
+       "       [720.        ,   7.4156169 ]])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "input_dict.keys()"
+    "import numpy as np\n",
+    "\n",
+    "trial_files = glob(os.path.join(tracking_dir,'*/trial.pik'))\n",
+    "# display(trial_files)\n",
+    "\n",
+    "trial_file = trial_files[1]\n",
+    "print(trial_file)\n",
+    "trial = utils.load_pik(trial_file)\n",
+    "data,frames = trial['data'],trial['frame_list']\n",
+    "print(np.searchsorted(frames,18))\n",
+    "np.array([frames,data[:,4,4]]).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(input_dict.keys())"
    ]
   },
   {
